feat(receive): add qr code screen, share, copy

--- a/mobile/src/translations/en.json
+++ b/mobile/src/translations/en.json
@@ -135,7 +135,10 @@
   "transactions": {
     "screens": {
       "receive": {
-        "title": "Receive"
+        "title": "Receive",
+        "recipient": "Recipient",
+        "generate": "Generate QR Code",
+        "immutable": "Immutable"
       },
       "send": {
         "amountNQT": "Amount",
