--- a/web/angular-wallet/src/locales/bg.json
+++ b/web/angular-wallet/src/locales/bg.json
@@ -571,7 +571,7 @@
   "max_memory": "Максимална памет",
   "max_nr_of_options": "Максимален брой опции",
   "maximum_nr_choices": "Максимален брой варианти",
-  "memorize_passphrase_help": "Моля, съхранявайте тези 12 думи на сигурно място. Тази парола е необходима, за да получите достъп до вашата Burst сметка.",
+  "memorize_passphrase_help": "Моля, съхранявайте тази парола на сигурно място. Тази парола е необходима за достъп до вашия Burst акаунт.",
   "memorize_passphrase_help_addon": "Ако загубите пропуск, няма да можете да извършвате никакви транзакции, т.е. монетите ви са изгубени. Кодовата фраза не може да бъде възстановена. Запазете тази секретна парола. Всеки, който знае паролата, е de facto собственикът на профила.",
   "message": "Съобщение",
   "message_empty": "Съобщението е празно.",
