--- a/web/angular-wallet/src/locales/el.json
+++ b/web/angular-wallet/src/locales/el.json
@@ -571,7 +571,7 @@
   "max_memory": "Max μνήμη",
   "max_nr_of_options": "Μέγιστος αριθμός επιλογών",
   "maximum_nr_choices": "Μέγιστος αριθμός επιλογών",
-  "memorize_passphrase_help": "Αποθηκεύστε αυτές τις 12 λέξεις σε ασφαλές μέρος. Αυτή η φράση πρόσβασης είναι απαραίτητη για να αποκτήσετε πρόσβαση στο λογαριασμό Burst.",
+  "memorize_passphrase_help": "Αποθηκεύστε αυτήν τη φράση πρόσβασης σε ασφαλές μέρος. Αυτή η φράση πρόσβασης είναι απαραίτητη για να αποκτήσετε πρόσβαση στο λογαριασμό Burst.",
   "memorize_passphrase_help_addon": "Εάν χάσετε τη φράση πρόσβασης, δεν θα μπορείτε να πραγματοποιήσετε συναλλαγές, δηλαδή τα νομίσματά σας χάνονται. Η φράση πρόσβασης δεν είναι ανακτήσιμη. Διατηρήστε αυτή τη φράση μυστικότητας. Όλοι όσοι γνωρίζουν τη φράση πρόσβασης είναι de facto ο κάτοχος του λογαριασμού.",
   "message": "Μήνυμα",
   "message_empty": "Το μήνυμα είναι κενό.",
