--- a/web/angular-wallet/src/locales/hi.json
+++ b/web/angular-wallet/src/locales/hi.json
@@ -571,7 +571,7 @@
   "max_memory": "अधिकतम मेमोरी",
   "max_nr_of_options": "Maximum Nr of Options",
   "maximum_nr_choices": "अधिकतम विकल्पों की संख्या",
-  "memorize_passphrase_help": "कृपया इन 12 शब्दों को सुरक्षित स्थान पर संग्रहीत करें। आपके फट खाते तक पहुँचने के लिए इस पासफ़्रेज़ की आवश्यकता है।",
+  "memorize_passphrase_help": "कृपया इस पासफ़्रेज़ को सुरक्षित स्थान पर संग्रहीत करें। आपके पास के बर्स्ट खाते तक पहुँचने के लिए इस पासफ़्रेज़ की आवश्यकता है।",
   "memorize_passphrase_help_addon": "यदि आप पासफ़्रेज़ को ढीला करते हैं तो आप कोई भी लेन-देन नहीं कर पाएंगे, यानी आपके सिक्के खो गए हैं। पासफ़्रेज़ पुनर्प्राप्त करने योग्य नहीं है। इस पासफ़्रेज़ को गुप्त रखें। पासफ़्रेज़ को जानने वाला हर व्यक्ति खाता का मालिक है।",
   "message": "संदेश",
   "message_empty": "संदेश खाली है।",
