--- a/web/angular-wallet/src/locales/ja.json
+++ b/web/angular-wallet/src/locales/ja.json
@@ -571,7 +571,7 @@
   "max_memory": "最大メモリ",
   "max_nr_of_options": "オプションの最大数",
   "maximum_nr_choices": "選択肢の最大数",
-  "memorize_passphrase_help": "この12の言葉を安全な場所に保管してください。このパスフレーズはあなたのBurstアカウントにアクセスするために必要です。",
+  "memorize_passphrase_help": "このパスフレーズは安全な場所に保管してください。このパスフレーズは、バーストアカウントにアクセスするために必要です。",
   "memorize_passphrase_help_addon": "あなたがパスフレーズを失うならば、あなたはどんな取引もすることができないでしょう、すなわちあなたのコインは失われます。パスフレーズは回復できません。このパスフレーズを秘密にしてください。パスフレーズを知っている人はだれでも事実上アカウントの所有者です。",
   "message": "メッセージ",
   "message_empty": "メッセージが空です。",
