--- a/web/angular-wallet/src/locales/ru.json
+++ b/web/angular-wallet/src/locales/ru.json
@@ -571,7 +571,7 @@
   "max_memory": "Максимальный объем памяти",
   "max_nr_of_options": "Максимальное количество вариантов",
   "maximum_nr_choices": "Максимальное количество вариантов",
-  "memorize_passphrase_help": "Пожалуйста, храните эти 12 слов (порядок и заглавные буквы - всегда строчные) в надежном месте. Эта фраза необходима для доступа к вашей учетной записи Burst.",
+  "memorize_passphrase_help": "Пожалуйста, храните эту фразу в надежном месте. Эта фраза необходима для доступа к вашей учетной записи Burst.",
   "memorize_passphrase_help_addon": "Если вы потеряете парольную фразу, вы не сможете совершать никаких транзакций, то есть ваши монеты будут потеряны. Пароль не подлежит восстановлению. Держите эту секретную фразу в секрете. Каждый, кто знает парольную фразу, де-факто является владельцем учетной записи.",
   "message": "Сообщение",
   "message_empty": "Пустое сообщение.",
