--- a/web/angular-wallet/src/locales/sr.json
+++ b/web/angular-wallet/src/locales/sr.json
@@ -571,7 +571,7 @@
   "max_memory": "Маx Меморија",
   "max_nr_of_options": "Максималан Број Опција",
   "maximum_nr_choices": "Максималан Број Избора",
-  "memorize_passphrase_help": "Молимо сачувајте ових 12 речи (редослед и велика слова - увек мала слова) на сигурном месту. Ова лозинка је потребна за приступ вашем Бурст налогу.",
+  "memorize_passphrase_help": "Молимо чувајте ову лозинку на сигурном месту. Ова лозинка потребна је за приступ вашем Бурст налогу.",
   "memorize_passphrase_help_addon": "Ако изгубите лозинку, нећете моћи да обавите ниједну трансакцију, тј. Изгубљени кованице. Лозинка није надокнадива. Чувајте тајну ове лозинке. Сви који знају запор су де фацто власници рачуна.",
   "message": "Порука",
   "message_empty": "Порука је празна.",
