--- a/web/angular-wallet/src/locales/uk.json
+++ b/web/angular-wallet/src/locales/uk.json
@@ -571,7 +571,7 @@
   "max_memory": "Макс пам'яті",
   "max_nr_of_options": "Максимальна кількість варіантів",
   "maximum_nr_choices": "Мінімальна кількість варіантів",
-  "memorize_passphrase_help": "Збережіть ці 12 слів (питання порядку та великих літер - завжди в нижньому регістрі) у безпечному місці. Ця парольна фраза потрібна для доступу до вашого облікового запису Burst.",
+  "memorize_passphrase_help": "Зберігайте цю парольну фразу в надійному місці. Ця парольна фраза потрібна для доступу до вашого облікового запису Burst.",
   "memorize_passphrase_help_addon": "Якщо ви втратите пароль, ви не зможете робити будь-які транзакції, тобто монети втрачені. Парольна фраза не відновлюється. Зберігайте цю секретну фразу. Кожен, хто знає пароль, фактично є власником облікового запису.",
   "message": "Повідомлення",
   "message_empty": "Порожнє повідомлення.",
