--- a/web/angular-wallet/src/locales/ca.json
+++ b/web/angular-wallet/src/locales/ca.json
@@ -571,7 +571,7 @@
   "max_memory": "Màxima Memòria",
   "max_nr_of_options": "Nr màxim d'opcions",
   "maximum_nr_choices": "Nº Màxim d'opcions",
-  "memorize_passphrase_help": "Emmagatzemeu aquestes 12 paraules en un lloc segur. Aquesta contrasenya és necessària per accedir al vostre compte de ruptura.",
+  "memorize_passphrase_help": "Emmagatzemi aquesta frase de contrasenya en un lloc segur. Aquesta frase de contrasenya és necessària per accedir al vostre compte de ràfega.",
   "memorize_passphrase_help_addon": "Si perdeu la contrasenya, no podreu fer cap transacció, és a dir, es perdran les vostres monedes. La contrasenya no es pot recuperar. Manteniu aquesta contrasenya secreta. Tothom que sàpiga la contrasenya és de facto el propietari del compte.",
   "message": "Missatge",
   "message_empty": "El Missatge és buit.",
