--- a/web/angular-wallet/src/locales/en.json
+++ b/web/angular-wallet/src/locales/en.json
@@ -580,7 +580,7 @@
   "max_memory": "Max Memory",
   "max_nr_of_options": "Maximum Nr of Options",
   "maximum_nr_choices": "Maximum Nr Of Choices",
-  "memorize_passphrase_help": "Please store these 12 words in a secure place. This passphrase is needed in order to access your Burst account.",
+  "memorize_passphrase_help": "Please store this passphrase in a secure place. This passphrase is needed in order to access your Burst account. ",
   "memorize_passphrase_help_addon": "If you lose the passphrase you won't be able to do any transactions, i.e. your coins are lost. The passphrase is not recoverable. Keep this passphrase secret. Everybody who knows the passphrase is de facto the owner of the account.",
   "message": "Message",
   "message_empty": "Message is empty.",
