--- a/web/angular-wallet/src/locales/lt.json
+++ b/web/angular-wallet/src/locales/lt.json
@@ -571,7 +571,7 @@
   "max_memory": "Max atmintis",
   "max_nr_of_options": "Didžiausias pasirinkimų kiekis",
   "maximum_nr_choices": "Maksimalus pasirinkimų kiekis",
-  "memorize_passphrase_help": "Saugokite 12 šių žodžių (užsakymų ir kapitalizacijos klausimų - visada mažas). Ši slaptafrazė reikalinga norint pasiekti jūsų „Burst“ paskyrą.",
+  "memorize_passphrase_help": "Saugokite šią slaptafrazę saugioje vietoje. Ši slaptafrazė reikalinga norint pasiekti jūsų „Burst“ paskyrą.",
   "memorize_passphrase_help_addon": "Jei prarandate slaptafrazę, negalėsite atlikti jokių operacijų, t. Y. Jūsų monetos prarandamos. Slaptafrazė nėra atkuriama. Laikykite šią slaptafrazę paslaptyje. Visi, kurie žino slaptafrazę, de facto yra paskyros savininkas.",
   "message": "Žinutė",
   "message_empty": "Žinutė yra tuščia.",
