--- a/web/angular-wallet/src/locales/pl.json
+++ b/web/angular-wallet/src/locales/pl.json
@@ -580,7 +580,7 @@
   "max_memory": "Maksymalna pamięć",
   "max_nr_of_options": "Maksymalna ilość opcji",
   "maximum_nr_choices": "Maksymalna ilość możliwości",
-  "memorize_passphrase_help": "Przechowuj te 12 słów (liczy się porządek i wielkość liter - zawsze małe litery) w bezpiecznym miejscu. To hasło jest potrzebne do uzyskania dostępu do konta Burst.",
+  "memorize_passphrase_help": "Proszę przechowywać to hasło w bezpiecznym miejscu. To hasło jest potrzebne, aby uzyskać dostęp do konta Burst.",
   "memorize_passphrase_help_addon": "Jeśli stracisz hasło, nie będziesz mógł wykonywać żadnych transakcji, tzn. Twoje monety zostaną utracone. Hasło nie można odzyskać. Zachowaj to hasło w tajemnicy. Każdy, kto zna hasło, jest de facto właścicielem konta.",
   "message": "Wiadomość",
   "message_empty": "Wiadomość jest pust",
