chore(scan): update translations

--- a/mobile/src/translations/en.json
+++ b/mobile/src/translations/en.json
@@ -149,6 +149,9 @@
         "title": "Send",
         "to": "To",
         "total": "Total: {{value}} BURST"
+      },
+      "scan": {
+        "title": "Scan BURST QR Code"
       }
     }
   },
