--- a/mobile/src/translations/ru.json
+++ b/mobile/src/translations/ru.json
@@ -148,6 +148,9 @@
         "title": "Отправить",
         "to": "Аккаунт получателя",
         "total": "Всего: {{value}} BURST"
+      },
+      "scan": {
+        "title": "Сканировать BURST QR-код"
       }
     }
   },
