--- a/mobile/src/translations/en.json
+++ b/mobile/src/translations/en.json
@@ -160,7 +160,10 @@
       "settings": {
         "title": "Settings",
         "erase": "Erase all accounts and reset PIN",
-        "confirmErase": "Confirm - Erase and Reset"
+        "confirmReset": "Are you sure? You cannot undo this action.",
+        "confirmErase": "Confirm - Erase and Reset",
+        "changeLanguage": "Select Language",
+        "copyright": "Copyright © Burst Apps Team"
       }
     }
   }
