Feat/settings cleanup (#814)
* feat(receive): add qr code screen, share, copy

* fix(Receive): use Switch instead of Checkbox

* chore(receive): clean up

* feat(mobile): add deep link support

* chore: fix lint

* chore(utils): linting

* chore: lint everything

* feat(mobile): add message and suggested fee support

* feat(mobile): add Fee Slider to send/receive screens

* feat(mobile): fix deep links, add qr scanner

* fix(mobile): fix bugs with qr routing

* feat(tos): add tos

* feat(mobile): add terms of use

* remove unused route

* chore(scan): update translations

* chore: address PR feedback

* feat(mobile): clean up settings page

* style(EnterPasscodeModal): clean up styles

* feat(mobile): more style cleanup

* chore: remove unused file

* style(PINModal): add logo

--- a/mobile/src/translations/en.json
+++ b/mobile/src/translations/en.json
@@ -13,7 +13,7 @@
       },
       "setPasscode": {
         "enterAgain": "Enter passcode again",
-        "passcodeHint": "Before continue, you must set up a passcode to secure your device"
+        "passcodeHint": "Please set a passcode to secure your device"
       }
     },
     "passcode": {
@@ -160,7 +160,10 @@
       "settings": {
         "title": "Settings",
         "erase": "Erase all accounts and reset PIN",
-        "confirmErase": "Confirm - Erase and Reset"
+        "confirmReset": "Are you sure? You cannot undo this action.",
+        "confirmErase": "Confirm - Erase and Reset",
+        "changeLanguage": "Select Language",
+        "copyright": "Copyright © Burst Apps Team"
       }
     }
   }
