--- a/mobile/src/translations/ru.json
+++ b/mobile/src/translations/ru.json
@@ -51,7 +51,10 @@
         "notePassphraseHint": "Запишите кодовую фразу. Кодовая фраза это главный ключ к аккаунту. Всегда держите кодовую фразу в безопасности!",
         "notePassphraseHint2": "Мы не храним кодовую фразу даже на телефоне, поэтому не можем восстановить доступ к аккаунту. Запишите ее!",
         "step": "Шаг {{step}}/4",
-        "title": "Создать аккаунт"
+        "title": "Создать аккаунт",
+        "noPublicKey": "Нет открытого ключа: подтвердите адрес перед отправкой.",
+        "invalidAddress": "Этот адрес недействителен.",
+        "zilOutage": "Невозможно получить из ZIL API."
       },
       "importAccount": {
         "activeAccount": "Активный аккаунт",
