Added account activation action on accounts table

--- a/web/angular-wallet/src/locales/bg.json
+++ b/web/angular-wallet/src/locales/bg.json
@@ -632,6 +632,7 @@
   "no_polls_found": "Няма намерени анкети.",
   "no_products_found": "Няма намерени продукти.",
   "no_products_listed_yet": "Все още не сте вписали продукти за продажба",
+  "no_public_key_activate": "Този акаунт все още няма публичен ключ. Кликнете, за да активирате и защитите акаунта си.",
   "no_public_key_warning": "Предупреждение!: вашата сметка няма публичен ключ! Това означава, че не е защитена като други сметки. Трябва да направите изходящ превод да решите проблема.",
   "no_purchased_products_found": "Не са намерени закупени продукти.",
   "no_sell_orders_for_asset": "Няма поръчки за продажба за този актив.",
