--- a/web/angular-wallet/src/locales/ca.json
+++ b/web/angular-wallet/src/locales/ca.json
@@ -632,6 +632,7 @@
   "no_polls_found": "No s'han trobat enquestes.",
   "no_products_found": "No s'han trobat articles.",
   "no_products_listed_yet": "Encara no heu possat cap producte a la venta",
+  "no_public_key_activate": "Aquest compte encara no té clau pública. Feu clic per activar i protegir el vostre compte.",
   "no_public_key_warning": "Alerta!: el vostre compte no té una clau pública! Això significa que no està tan protegida com altres comptes. Hi heu de fer una transacció per solucionar aquest problema.",
   "no_purchased_products_found": "No s'han trobat productes adquirits.",
   "no_sell_orders_for_asset": "No hi ha ordres de venta para aquest actiu.",
