--- a/web/angular-wallet/src/locales/de-de.json
+++ b/web/angular-wallet/src/locales/de-de.json
@@ -632,6 +632,7 @@
   "no_polls_found": "Keine Abstimmungen gefunden.",
   "no_products_found": "Keine Artikel gefunden.",
   "no_products_listed_yet": "Keine Artikel zum Kauf angeboten. <a href='#'' data-toggle='modal' data-target='#dgs_listing_modal'>Bieten Sie eins an.</a>",
+  "no_public_key_activate": "Dieses Konto hat noch keinen öffentlichen Schlüssel. Klicken Sie hier, um Ihr Konto zu aktivieren und zu sichern.",
   "no_public_key_warning": "Warnung!: Ihr Benutzerkonto besitzt keinen öffentlichen Schlüssel! Dies bedeutet, dass es ungenügend geschützt ist. Erstellen Sie eine ausgehende Transaktion um dieses Problem zu beheben.",
   "no_purchased_products_found": "Keine gekauften Artikel gefunden.",
   "no_sell_orders_for_asset": "Keine Verkaufsorders für dieses Asset.",
