--- a/web/angular-wallet/src/locales/gl.json
+++ b/web/angular-wallet/src/locales/gl.json
@@ -632,6 +632,7 @@
   "no_polls_found": "Non se atoparon enquisas.",
   "no_products_found": "Non se atoparon artigos.",
   "no_products_listed_yet": "Aínda non se ten posto ningún artigo á venda, <a href='#'' data-toggle='modal' data-target='#dgs_listing_modal'>engada un.</a>",
+  "no_public_key_activate": "Esta conta aínda non ten clave pública. Fai clic para activar e protexer a túa conta.",
   "no_public_key_warning": "¡Aviso!: ¡ A súa conta non ten clave pública! Esto significa que non está protexida como outras contas. Debe realizar unha transacción de saída para arranxalo.",
   "no_purchased_products_found": "Non se atoparon artigos mercados.",
   "no_sell_orders_for_asset": "Non hai ordes de venda para este activo.",
