--- a/web/angular-wallet/src/locales/nl.json
+++ b/web/angular-wallet/src/locales/nl.json
@@ -632,6 +632,7 @@
   "no_polls_found": "Geen peilingen gevonden.",
   "no_products_found": "Geen producten gevonden.",
   "no_products_listed_yet": "U heeft nog geen producten te koop aangeboden,<a href='#'' data-toggle='modal' data-target='#dgs_listing_modal'>een toevoegen.</a>",
+  "no_public_key_activate": "Dit account heeft nog geen openbare sleutel. Klik om uw account te activeren en te beveiligen.",
   "no_public_key_warning": "Waarschuwing!: uw account heeft nog geen openbare sleutel! Dit houd in dat de rekening niet optimaal beschermd is. U moet een uitgaande transactie maken om een openbare sleutel te genereren en dus optimaal bescherming inschakelen.",
   "no_purchased_products_found": "Geen aangekocht producten gevonden.",
   "no_sell_orders_for_asset": "Geen verkooporders voor dit activum.",
