--- a/web/angular-wallet/src/locales/pt-pt.json
+++ b/web/angular-wallet/src/locales/pt-pt.json
@@ -632,6 +632,7 @@
   "no_polls_found": "Não se encontraram enquetes.",
   "no_products_found": "Nenhum produto encontrado.",
   "no_products_listed_yet": "Ainda não colocou artigo nenhum à venda, <a href='#'' data-toggle='modal' data-target='#dgs_listing_modal'>adicione um.</a>",
+  "no_public_key_activate": "Esta conta ainda não tem chave pública. Clique para ativar e proteger sua conta.",
   "no_public_key_warning": "Aviso!: a sua conta não tem chave pública! Isto significa que ela não é tão protegida como outras contas. Você deve fazer uma transação de saída para corrigir este problema.",
   "no_purchased_products_found": "Não se encontraram artigos comprados.",
   "no_sell_orders_for_asset": "Não há ordens de venda para este ativo.",
