--- a/web/angular-wallet/src/locales/sk.json
+++ b/web/angular-wallet/src/locales/sk.json
@@ -632,6 +632,7 @@
   "no_polls_found": "Žiadne hlasovanie sa nenašlo.",
   "no_products_found": "Neboli nájdené žiadne produkty.",
   "no_products_listed_yet": "Neuviedli ste zatiaľ žiadne produkty na predaj, <a href='#'' data-toggle='modal' data-target='#dgs_listing_modal'> pridať jeden.</a>",
+  "no_public_key_activate": "Tento účet zatiaľ nemá žiadny verejný kľúč. Kliknutím aktivujte a zabezpečte svoj účet.",
   "no_public_key_warning": "Upozornenie!: váš účet nemá verejný kľúč! To znamená, že nie je tak chránený ako ostatné účty. Musíte vykonať jednu odchádzajúcu transakciu pre nápravu tohto problému.",
   "no_purchased_products_found": "Nenašli sa žiadne zakúpené produkty.",
   "no_sell_orders_for_asset": "Žiadne príkazy na predaj tohto majetku.",
