--- a/web/angular-wallet/src/locales/sr-cs.json
+++ b/web/angular-wallet/src/locales/sr-cs.json
@@ -594,6 +594,7 @@
   "no_polls_found": "Ankete nisu pronađenje.",
   "no_products_found": "Proizvodi nisu pronađeni.",
   "no_products_listed_yet": "Niste ponudili nijedan proizvod na prodaju, <a href='#'' data-toggle='modal' data-target='#dgs_listing_modal'>dodajte jedan.</a>",
+  "no_public_key_activate": "Овај рачун још нема јавни кључ. Кликните да бисте активирали и заштитили свој налог.",
   "no_public_key_warning": "Pažnja!</strong>: Vaš nalog ne poseduje javni ključ! Vaš nalog nije zaštićen kao drugi nalozi. Morate izvršiti 1 odlazeću transakciju da biste popravili ovaj problem.",
   "no_purchased_products_found": "Nema nađenih kupljenih proizvoda.",
   "no_sell_orders_for_asset": "Nema prodajnih naloga za ovaj asset.",
