--- a/web/angular-wallet/src/locales/sr.json
+++ b/web/angular-wallet/src/locales/sr.json
@@ -632,6 +632,7 @@
   "no_polls_found": "Анкете нису пронађење.",
   "no_products_found": "Производи нису пронађени.",
   "no_products_listed_yet": "Нисте понудили ниједан производ на продају,  <a href='#'' data-toggle='modal' data-target='#dgs_listing_modal'>додајте један.</a>",
+  "no_public_key_activate": "Овај рачун још нема јавни кључ. Кликните да бисте активирали и заштитили свој налог.",
   "no_public_key_warning": "Пажња!: Ваш налог не поседује јавни кључ! Ваш налог није заштићен као други налози. Морате извршити 1 одлазећу трансакцију да бисте поправили овај проблем.",
   "no_purchased_products_found": "Нема нађених купљених производа.",
   "no_sell_orders_for_asset": "Нема продајних налога за овај ассет.",
