--- a/web/angular-wallet/src/locales/zh-tw.json
+++ b/web/angular-wallet/src/locales/zh-tw.json
@@ -632,6 +632,7 @@
   "no_polls_found": "未找到投票。",
   "no_products_found": "未找到產品",
   "no_products_listed_yet": "你還沒有任何出售的產品<a href='#'' data-toggle='modal' data-target='#dgs_listing_modal'> 添加一個。 </a>",
+  "no_public_key_activate": "此帐户还没有公钥。单击以激活并保护您的帐户。",
   "no_public_key_warning": "警告 ！ ： 您的帳戶沒有公匙 ！這意味著不像其它帳戶一樣受到保護。您必須發生一次轉出交易來解決該問題。",
   "no_purchased_products_found": "未找到已購買的產品",
   "no_sell_orders_for_asset": "該資產沒有賣單。",
