--- a/web/angular-wallet/src/locales/cs.json
+++ b/web/angular-wallet/src/locales/cs.json
@@ -632,6 +632,7 @@
   "no_polls_found": "Žádné ankety nebyly nalezeny.",
   "no_products_found": "Žádné produkty nebyly nalezeny.",
   "no_products_listed_yet": "You haven't listed any products for sale yet, <a href='#'' data-toggle='modal' data-target='#dgs_listing_modal'>add one.</a>",
+  "no_public_key_activate": "Tento účet zatím nemá veřejný klíč. Klepnutím aktivujte a zabezpečte svůj účet.",
   "no_public_key_warning": "Warning!: Your account does not have a public key! This means it's not as protected as other accounts. You must make an outgoing transaction to fix this issue.",
   "no_purchased_products_found": "Nebyly nalezeny žádné zakoupené produkty.",
   "no_sell_orders_for_asset": "Žádné příkazy k prodeji tohoto aktiva.",
