--- a/web/angular-wallet/src/locales/es-es.json
+++ b/web/angular-wallet/src/locales/es-es.json
@@ -632,6 +632,7 @@
   "no_polls_found": "No se han encontrado encuestas.",
   "no_products_found": "No se han encontrado artículos.",
   "no_products_listed_yet": "Aún no ha puesto ningún artículo en venta, <a href='#'' data-toggle='modal' data-target='#dgs_listing_modal'>añada uno.</a>",
+  "no_public_key_activate": "Esta cuenta aún no tiene clave pública. Haga clic para activar y asegurar su cuenta.",
   "no_public_key_warning": "¡Aviso!: ¡Su cuenta no tiene clave pública! Esto significa que no está protegida como otras cuentas. Debe realizar una transacción de salida para arreglarlo.",
   "no_purchased_products_found": "No se han encontrado artículos comprados.",
   "no_sell_orders_for_asset": "No hay órdenes de venta para este activo.",
