--- a/web/angular-wallet/src/locales/hi.json
+++ b/web/angular-wallet/src/locales/hi.json
@@ -632,6 +632,7 @@
   "no_polls_found": "कोई मतदान नहीं मिले।",
   "no_products_found": "कोई उत्पाद नहीं मिले।",
   "no_products_listed_yet": "You haven't listed any products for sale yet, <a href='#'' data-toggle='modal' data-target='#dgs_listing_modal'>add one.</a>",
+  "no_public_key_activate": "इस खाते में अभी तक कोई सार्वजनिक कुंजी नहीं है। अपने खाते को सक्रिय और सुरक्षित करने के लिए क्लिक करें।",
   "no_public_key_warning": "Warning!: Your account does not have a public key! This means it's not as protected as other accounts. You must make an outgoing transaction to fix this issue.",
   "no_purchased_products_found": "कोई खरीदे उत्पाद नहीं मिले।",
   "no_sell_orders_for_asset": "इस सम्पत्ति के लिए कोई बेचने के आदेश नहीं।",
