--- a/web/angular-wallet/src/locales/id.json
+++ b/web/angular-wallet/src/locales/id.json
@@ -632,6 +632,7 @@
   "no_polls_found": "Ada jajak pemilihan ditemukan.",
   "no_products_found": "Tidak ada Produk yang ditemukan.",
   "no_products_listed_yet": "Anda belum terdaftar produk untuk dijual, <a href='#'' data-toggle='modal' data-target='#dgs_listing_modal'> menambahkan satu.</a>",
+  "no_public_key_activate": "Akun ini belum memiliki kunci publik. Klik untuk mengaktifkan dan mengamankan akun Anda.",
   "no_public_key_warning": "Peringatan!: akun Anda tidak memiliki kunci umum! Ini berarti itu adalah tidak seperti yang dilindungi account lainnya. Anda harus membuat transaksi outgoing untuk memperbaiki masalah ini.",
   "no_purchased_products_found": "Tidak ada produk yang dibeli telah ditemukan.",
   "no_sell_orders_for_asset": "Tidak menjual pesanan untuk aset ini.",
