--- a/web/angular-wallet/src/locales/ja.json
+++ b/web/angular-wallet/src/locales/ja.json
@@ -632,6 +632,7 @@
   "no_polls_found": "投票調査が見つかりませんでした。",
   "no_products_found": "商品が見つかりません。",
   "no_products_listed_yet": "あなたはまだ、販売のための製品をリストに載せていません。 <a href='#'' data-toggle='modal' data-target='#dgs_listing_modal'> 追加してください。</a>。",
+  "no_public_key_activate": "このアカウントにはまだ公開鍵がありません。クリックしてアカウントを有効化し、保護します。",
   "no_public_key_warning": "警告！: あなたのアカウントには公開キーがありません！ このことは、その他のアカウントのように保護されていないことを意味します。この問題を解決するために発信トランザクションを行う必要があります。",
   "no_purchased_products_found": "購入商品が見つかりません。",
   "no_sell_orders_for_asset": "この資産の売り注文はありません。",
