--- a/web/angular-wallet/src/locales/pl.json
+++ b/web/angular-wallet/src/locales/pl.json
@@ -641,6 +641,7 @@
   "no_polls_found": "Nie znaleziono ankiet.",
   "no_products_found": "Nie znaleziono produktów.",
   "no_products_listed_yet": "Jeszcze nie dodałeś produktów na sprzedaż, <a href='#'' data-toggle='modal' data-target='#dgs_listing_modal'>dodaj produkt.</a>",
+  "no_public_key_activate": "To konto nie ma jeszcze klucza publicznego. Kliknij, aby aktywować i zabezpieczyć swoje konto.",
   "no_public_key_warning": "Uwaga!: Twoje konto nie posiada klucza publicznego przez co jest gorzej zabezpieczone! Musisz wykonać transakcje wychodzącą by uzyskać klucz publiczny.",
   "no_purchased_products_found": "Kupione produkty nie zostały znalezione.",
   "no_sell_orders_for_asset": "Brak zleceń sprzedaży dla tego aktywa.",
