--- a/web/angular-wallet/src/locales/pt-br.json
+++ b/web/angular-wallet/src/locales/pt-br.json
@@ -634,6 +634,7 @@
   "no_polls_found": "Não há enquetes encontradas.",
   "no_products_found": "Nenhum produto encontrado.",
   "no_products_listed_yet": "Você ainda não listou nenhum produto para vender",
+  "no_public_key_activate": "Esta conta ainda não tem chave pública. Clique para ativar e proteger sua conta.",
   "no_public_key_warning": "Aviso: sua conta não possui uma chave pública! Isto significa que ela não é tão protegida como outras contas. Você deve fazer uma transação de saída para corrigir este problema.",
   "no_purchased_products_found": "Não há produtos adquiridos.",
   "no_sell_orders_for_asset": "Sem ordens de venda para este ativo.",
