--- a/web/angular-wallet/src/locales/sh.json
+++ b/web/angular-wallet/src/locales/sh.json
@@ -632,6 +632,7 @@
   "no_polls_found": "Ankete nisu pronađene.",
   "no_products_found": "Proizvodi nisu pronađeni.",
   "no_products_listed_yet": "You haven't listed any products for sale yet, <a href='#'' data-toggle='modal' data-target='#dgs_listing_modal'>add one.</a>",
+  "no_public_key_activate": "",
   "no_public_key_warning": "Warning!: Your account does not have a public key! This means it's not as protected as other accounts. You must make an outgoing transaction to fix this issue.",
   "no_purchased_products_found": "Nema pronađenih kupljenih proizvoda.",
   "no_sell_orders_for_asset": "Nema prodajnih naloga za ovaj asset.",
