--- a/web/angular-wallet/src/locales/uk.json
+++ b/web/angular-wallet/src/locales/uk.json
@@ -632,6 +632,7 @@
   "no_polls_found": "Опитування не знайдено.",
   "no_products_found": "Немає жодного товару.",
   "no_products_listed_yet": "Ви ще не опублікували товари для продажу <a href='#'' data-toggle='modal' data-target='#dgs_listing_modal'>додати один.</a>",
+  "no_public_key_activate": "У цього облікового запису ще немає відкритого ключа. Клацніть, щоб активувати та захистити свій обліковий запис.",
   "no_public_key_warning": "Попередження!: ваш аккаунт не має відкритого ключа! Це означає, що ваш аккаунт не захищений належним чином. Ви повинні зробити хоч би одну витікаючу транзакцію, щоб виправити цю проблему.",
   "no_purchased_products_found": "Куплені товари не знайдені .",
   "no_sell_orders_for_asset": "Немає заявок на продаж цього активу.",
