--- a/web/angular-wallet/src/locales/zh-cn.json
+++ b/web/angular-wallet/src/locales/zh-cn.json
@@ -632,6 +632,7 @@
   "no_polls_found": "未找到投票。",
   "no_products_found": "未找到产品。",
   "no_products_listed_yet": "您还没有任何出售的产品 <a href='#'' data-toggle='modal' data-target='#dgs_listing_modal'> 添加一个。</a>",
+  "no_public_key_activate": "此帐户还没有公钥。单击以激活并保护您的帐户。",
   "no_public_key_warning": "警告 ！： 您的帐户没有公钥 ！这意味着不像其它帐户一样受到保护。您必须发生一次转出交易来解决该问题。",
   "no_purchased_products_found": "未找到已购买的产品。",
   "no_sell_orders_for_asset": "该资产没有卖单。",
